--- a/ClubMembershipApplication/ClubMembershipApplication.csproj
+++ b/ClubMembershipApplication/ClubMembershipApplication.csproj
@@ -19,4 +19,11 @@
     <Folder Include="Models\" />
     <Folder Include="Views\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
